@@ -8,6 +8,7 @@
 gboolean create_game_menus();
 void really_exit_cb (GtkWidget *, gpointer);
 void exit_cb (GtkWidget *, gpointer);
+void update_score_state ();
 /**********************************************************************/
 
 
