@@ -1,3 +1,12 @@
+2002-08-23  Ross Burton  <ross@burtonini.com>
+
+	* game.c:
+	* gnobots.c:
+	* menu.c:
+	* menu.h:
+	* properties.c: Enable the high scores dialog. Patch from Andrew
+	Sobala <andrew@sobala.net>, fixing #84235.
+
 2002-08-20  Ross Burton  <ross@burtonini.com>
 
 	* menu.c: Rewrite the Quit and New callbacks. Fixes #90984.
